# codepraise-api-python

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Pipfile  Procfile  README.md  alembic.ini  app.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  heroku.yml  index.html  main.py  mkdocs.yml  mypy.ini  pyproject.toml  repo_info.py  typing_helpers.py
.github/workflows/: ci.yml  test.yml
app/application/: app.py
application/: app.py
application/controllers/: api.py  clone_progress_publisher.py  repo.py  route_helpers.py  summary.py  summary_controller.py
application/representers/: __init__.py  clone_request_representer.py  folder_summary_representer.py  http_response_representer.py
application/services/: __init__.py  find_database_repo.py  load_from_github.py  (+1 more)
config/: .env.example  config.py  db_session.py  environment.py  pubsub.py
docker/: index.html
docs/: docker.md  index.md  invoke.md  prerequisite.md
invoke/: index.html
lib/: contributor.py  github_api.py  repo.py
prerequisite/: index.html
search/: search_index.json
spec/: api_spec.py  conftest.py  gh_spec.py  git_spec.py  github_spec.py  repo_spec.py  spec_helper.py  summary_spec.py  test_load_all.py
tasks/: __init__.py  api.py  console.py  db.py  quality.py  queue.py  queues.py  repostore.py  spec.py  test.py  vcr.py
tests/: conftest.py  helper.py  test_api.py  test_github.py  test_summary.py
workers/: __init__.py  clone_monitor.py  clone_repo_worker.py  job_reporter.py  progress_publisher.py
(+142 files in other folders)
