[tool.poetry]
name = "codepraise-api-python"
version = "0.1.0"
description = ""
authors = ["as10896"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.9.1"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
python-dotenv = "^0.20.0"
invoke = "^1.7.1"
SQLAlchemy = "^1.4.39"
returns = "^0.19.0"
celery = {extras = ["sqs"], version = "^5.2.7"}
boto3 = "^1.24.26"  # to connect to Amazon SQS


[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
alembic = "^1.8.0"
asyncio-redis = "^0.16.0"  # to connect to Redis for PubSub over WebSocket in production
ipython = "^8.4.0"
gunicorn = "^20.1.0"
psycopg2 = {markers = "sys_platform == 'linux'", version = "^2.9.3"}
psycopg2-binary = {markers = "sys_platform != 'linux'", version = "^2.9.3"}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
alembic = "^1.8.0"
ipython = "^8.4.0"
flake8 = "^4.0.1"
radon = "^5.1.0"
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.961"
pre-commit = "^2.20.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
vcrpy = "^4.2.0"
pytest-asyncio = "^0.18.3"
PyYAML = "^6.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
